--- a/style.css
+++ b/style.css
@@ -1,6 +1,35 @@
      body {
     font-family: Helvetica
+    margin: 0;
    }
-    .title: {
+   .main-section {
+   margin: auto;
+   width: 80%;
+   }
+  .wrapper {
+    margin: auto;
+    width: 80%;
+   }
+  .logo,
+  .menu {
+    display: inline-block;
+   }
+  .header {
+    margin: auto;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+   }
+  .logo {
+  position: relative:
+  padding: 40px 0 40px 0;
+   }
+   .menu__item {
+  padding: 0 13px;
+   }
+   .menu__item:last-child {
+  padding-right: 0;
+   }
+  .title: {
     font-family:'Roboto', sans serif;
    }
