--- a/style.css
+++ b/style.css
@@ -18,6 +18,25 @@
   .logo {
   position: relative;
   padding: 40px 0 40px 0;
+  padding-left: 44px;
+  font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+   }
+  .logo__circle
+   position: absolute;
+   top: 50%;
+   left: 0;
+   transform: translateY(-50%);
+   width: 28px;
+   height: 28px;
+   border-radius: 50%;
+   opacity: 0.7;
+   .logo__circle_color_blue {
+  left: 8px;
+  top: 56%;
+  background: #C8DBFB;
+   }
+   .logo__circle_color_dark-blue {
+    background: #0056EC;
    }
    .menu__item {
   padding: 0 13px;
