--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
    }
   .logo {
   position: relative;
-  padding: 40px 0 40px 0;
-  padding-left: 44px;
+  padding: 40px 0 40px 44px;
   font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
    }
-  .logo__circle
+  .logo__circle {
    position: absolute;
    top: 50%;
    left: 0;
@@ -30,6 +30,7 @@
    height: 28px;
    border-radius: 50%;
    opacity: 0.7;
+  }
    .logo__circle_color_blue {
   left: 8px;
   top: 56%;
